[package]
name = "usb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
rusb = "0.9.4"
eframe = "0.27"
egui = "0.27"
serde_json = "1.0"
serde = { version = "1.0.219", features = ["derive"] }